--- a/backend/.env.example
+++ b/backend/.env.example
@@ -1,5 +1,8 @@
-# OpenAI Configuration
-OPENAI_API_KEY=your_openai_api_key_here
+# GROQ Configuration (Required - Free & Fast!)
+GROQ_API_KEY=your_groq_api_key_here
+
+# HuggingFace Configuration (Optional but recommended for better rate limits)
+HF_TOKEN=your_huggingface_token_here
 
 # ChromaDB Configuration
 CHROMA_PERSIST_DIR=./chroma_db
@@ -7,6 +10,6 @@ CHROMA_PERSIST_DIR=./chroma_db
 # Upload Configuration
 UPLOAD_DIR=../uploads
 
-# Optional: Override default models
-# EMBEDDING_MODEL=text-embedding-3-small
-# CHAT_MODEL=gpt-4o-mini
+# Models (optional overrides)
+# EMBEDDING_MODEL=nomic-ai/nomic-embed-text-v1.5
+# CHAT_MODEL=llama3-8b-8192
